# Suuri

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  benchmark.sh  specification.md
benchmark/: CMakeLists.txt
benchmark/integer/: CMakeLists.txt  integer_benchmark.cpp
benchmarking/: CMakeLists.txt  main.cpp
random_tests/int/addition/: addition_16bit_input.test  addition_32bit_input.test  addition_64bit_input.test  addition_8bit_input.test  addition_large_input.test
random_tests/int/division/: division_16bit_input.test  division_32bit_input.test  division_64bit_input.test  division_8bit_input.test  division_large_input.test
random_tests/int/multiplication/: multiplication_16bit_input.test  multiplication_32bit_input.test  multiplication_64bit_input.test  multiplication_8bit_input.test  multiplication_large_input.test
random_tests/int/subtraction/: subtraction_16bit_input.test  subtraction_32bit_input.test  subtraction_64bit_input.test  subtraction_8bit_input.test  subtraction_large_input.test
sandbox/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  big-float.cpp  big-float.h  big-int.cpp  big-int.h  big-uint.cpp  big-uint.h  big_int.hpp  exception.hpp  suuri-typetraits.h  suuri_concept.hpp  suuri_core.hpp  suuri_exception.hpp  suuri_math.hpp  suurimath.cpp  suurimath.h
tests/: CMakeLists.txt  basic-arithmatic-tests.cpp  conversion-tests.cpp  logic-operator-tests.cpp
tests/int_tests/: addition.cpp  comparison.cpp  division.cpp  multiplication.cpp  string.cpp  subtraction.cpp  suuri_math.cpp  test_helpers.hpp
tests/primitive_tests/: suuri_math.cpp
